--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "framer-motion": "^4.1.9",
     "next": "latest",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
