--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.3.0",
     "apexcharts": "^3.26.1",
+    "axios": "^0.21.1",
     "framer-motion": "^4.1.9",
     "next": "latest",
     "react": "^17.0.1",
