--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.1",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-query": "^3.13.12"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
