--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apexcharts": "^3.26.1",
     "axios": "^0.21.1",
     "framer-motion": "^4.1.9",
+    "miragejs": "^0.1.41",
     "next": "latest",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.9",
