chore: add faker

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.3.0",
     "apexcharts": "^3.26.1",
     "axios": "^0.21.1",
+    "faker": "^5.5.3",
     "framer-motion": "^4.1.9",
     "miragejs": "^0.1.41",
     "next": "latest",
@@ -24,6 +25,7 @@
     "react-query": "^3.13.12"
   },
   "devDependencies": {
+    "@types/faker": "^5.5.3",
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
