--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^1.6.0",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.3.0",
+    "@hookform/resolvers": "^2.4.0",
     "apexcharts": "^3.26.1",
     "axios": "^0.21.1",
     "faker": "^5.5.3",
@@ -22,7 +23,8 @@
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
-    "react-query": "^3.13.12"
+    "react-query": "^3.13.12",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/faker": "^5.5.3",
