--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@hookform/resolvers": "^2.4.0",
     "apexcharts": "^3.26.1",
     "axios": "^0.21.1",
-    "faker": "^5.5.3",
+    "faker-br": "^0.4.1",
     "framer-motion": "^4.1.9",
     "next": "latest",
     "react": "^17.0.1",
